# fastapi-sqlalchemy-sqlite-template

./: README.md  pyproject.toml
database/: models.py
routes/: posts.py
schemas/: models.py
utils/: post_crud.py
