[tool.poetry]
name = "fastapi-sqlalchemy-sqlite-template"
version = "0.1.0"
description = ""
authors = ["manamimebom <172320@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^23.1.0"
aniso8601 = "^9.0.1"
appdirs = "^1.4.4"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
atomicwrites = "^1.4.1"
attrs = "^23.1.0"
black = "^23.3.0"
certifi = "^2023.5.7"
chardet = "^5.1.0"
click = "^8.1.3"
colorama = "^0.4.6"
dnspython = "^2.3.0"
email-validator = "^2.0.0.post2"
fastapi = "^0.95.1"
graphene = "^3.2.2"
graphql-core = "^3.2.3"
graphql-relay = "^3.2.0"
greenlet = "^2.0.2"
h11 = "^0.14.0"
idna = "^3.4"
iniconfig = "^2.0.0"
isort = "^5.12.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
markupsafe = "^2.1.2"
mypy-extensions = "^1.0.0"
orjson = "^3.8.12"
packaging = "^23.1"
pathspec = "^0.11.1"
pluggy = "^1.0.0"
promise = "^2.3"
psycopg2 = "^2.9.6"
py = "^1.11.0"
pydantic = "^1.10.7"
pyparsing = "^3.0.9"
pytest = "^7.3.1"
pytest-dependency = "^0.5.1"
python-decouple = "^3.8"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
pyyaml = "^6.0"
regex = "^2023.5.5"
requests = "^2.30.0"
rx = "^3.2.0"
six = "^1.16.0"
starlette = "^0.26.1"
toml = "^0.10.2"
typed-ast = "^1.5.4"
typing-extensions = "^4.5.0"
ujson = "^5.7.0"
uvicorn = "^0.22.0"
watchgod = "^0.8.2"
websockets = "^11.0.3"
sqlalchemy = "^2.0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
